<resources>
	<string name="checkUpdate_title">更新提示</string>
	<string name="checkUpdate_msg1">"正在检测新版本…"</string>
	<string name="checkUpdate_msg2">"发现新版本，是否更新?"</string>
	<string name="checkUpdate_msg3">"此次更新内容："</string>
	<string name="checkUpdate_toast1">没有新版本</string>
	<string name="checkUpdate_updateNow">立即更新</string>
	<string name="checkUpdate_updatelater">以后提醒</string>
    <string name="new_version_uploadbtn">立即更新</string>
    <string name="new_version_cancelbtn">下次更新</string>
    <string name="new_version_title">更新提醒</string>
    <string name="saving">保存图片…</string>
    <string name="wait">请稍后…</string>
    <string name="error_pick_image">图片无效</string>
    <string name="done">保存</string>
    <string name="cancel">取消</string>
    <string name="wallpaper">正在设置壁纸，请稍候…</string>
    <string name="multiface_crop_help">轻点一张脸开始裁剪。</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="http_status_code_error">网络异常</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_download_error">下载失败</string>
    <string name="app_download_complete">下载完成，点击安装。</string>
    <string name="app_download_start">开始下载</string>
    <string name="app_find_new">发现新版本</string>
    <string name="app_current_is_new">当前版本已是最新版本，版本号是：%s</string>
    <string name="app_show_message" formatted="false">当前有新版本，版本号是：%1$s，已安装版本是：%2$s</string>
    <string name="app_find_new_title">发现新版本: %s</string>
    <string name="app_message">修复bug</string>
    <string name="app_ok">立即更新</string>
    <string name="app_cancel">以后再说</string>
    <string name="app_quit">退出</string>
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">partner</string>
    <string name="sellerHint">seller</string>
    <string name="out_trade_noHint">out_trade_no</string>
    <string name="subjectHint">subject</string>
    <string name="bodyHint">body</string>
    <string name="total_feeHint">total_fee</string>
    <string name="notify_urlHint">notify_url</string>
    <string name="charsetHint">charset</string>
    <string name="signTypeHint">signType</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="list_end_load_text">正在加载数据…</string>
    <string name="dialog_loading_text">加载中…</string>
    <string name="no_data">暂无数据</string>
    <string name="start_time">开始时间：</string>
    <string name="stop_time">停止时间：</string>
    <string name="add">添加</string>
    <string name="sdcard_error">无法载入sdcard</string>
    <string name="photo_take">拍照</string>
    <string name="photo_loc">本地</string>
    <string name="photo_cancle">取消</string>
    <string name="exit_out_success">退出成功</string>
    <string name="btn_update_my_info">编辑个人资料</string>
    <string name="bmi_height">身高:</string>
    <string name="bmi_height_unit">单位:厘米</string>
    <string name="bmi_weight">体重:</string>
    <string name="bmi_weight_unit">单位:千克</string>
    <string name="bmi_compute">点击测试BMI</string>
    <string name="bmi_weight_not_null">无效的体重</string>
    <string name="bmi_height_not_null">无效的身高</string>
    <string name="layout_temp410">一、挂号支付</string>
    <string name="layout_temp411">1.不注册可以挂号吗？</string>
    <string name="layout_temp412">目前手机挂号暂未对未注册用户开放。您只有注册并完善个人信息后才能进行挂号，具体的注册流程如下：点击软件首页底部的“未登录”→点击“注册”→输入您的手机号码→点击“获取验证码”→在验证码输入框中输入收到的验证码→点击“下一步”→输入您的登录密码→完成注册，最后到个人中心完善相关信息就可以进行手机挂号了。</string>
    <string name="layout_temp413">2、给自己和他人挂普通号需要哪些信息？</string>
    <string name="layout_temp414">目前给自己或替他人挂号时，必须先完善您或他人的姓名、性别、手机号吗、身份证号码和就诊卡号，并且这些信息要与您在就医时填写的信息一致，才能确保挂号成功。</string>
    <string name="layout_temp415">3、预约专家号需要填写哪些信息？</string>
    <string name="layout_temp416">预约专家号时，您的姓名、手机号吗、性别和身份证号码是必填信息，如果以上信息少填或漏填都将导致预约专家号失败。</string>
    <string name="layout_temp417">4、为什么在挂号过程中需要短信验证？</string>
    <string name="layout_temp418">只有您替他人挂号时，才会出现短信验证，短信验证一定程度上保障了用户信息安全，此外，也是为了保证手机号码的有效性，确保您的朋友能够及时收到挂号凭证。</string>
    <string name="layout_temp419">5、挂号费用如何支付？</string>
    <string name="layout_temp420">挂号费收费分普通号、专家号两种类型。</string>
    <string name="layout_temp421">其中普通号的支付方式有支付宝付费和先诊疗后支付两种方式。您可以通过已开通的支付宝账户，在手机应用上直接支付；当然您也可以选择先诊疗后支付方式，就诊结束后再到医院收费窗口统一支付。</string>
    <string name="layout_temp422">专家预约挂号在软件中不收费，您可在就诊当天10：30以前凭预约号到医院1号楼2楼付费取号，否则该号源自动作废。若您累积违约3次，将被拉入黑名单，且三个月内不能在掌上预约挂号。</string>
    <string name="layout_temp423">6、什么是挂号“违约”？</string>
    <string name="layout_temp424">挂号“违约”目前只针对于专家号预约，具体指预约成功后，但没有就诊，包括未到医院就诊且未在就诊当日上午7点前取消预约；迟到或错过最迟取号时间，其中最迟取号时间为就诊当日上午10：30，均视为一次违约。若您累积违约3次，将被拉入黑名单，且三个月内不能在掌上预约挂号。</string>
    <string name="layout_temp425">7、成功挂取的号有凭证吗？是否还需要到医院窗口排队取号？</string>
    <string name="layout_temp426">如果您预约的是普通号，挂号成功之后，您将收到一条短信挂号凭证，或者你可以通过掌上个人中心的历史挂号记录，查询您的挂号记录，您可以凭短信凭证或历史挂号记录直接就诊，免于挂号排队。</string>
    <string name="layout_temp427">如果您预约的是专家号，应在就诊当天10：30以前凭预约号到医院1号楼2楼付费取号，否则该号源自动作废。若您累积违约3次，将被拉入黑名单，且三个月内不能在掌上预约挂号。</string>
    <string name="layout_temp428">8、预约成功的号只能在当天使用吗？</string>
    <string name="layout_temp429">目前普通号只能预约当天门诊，即只能在当天就诊，如果当天您没有去医院就诊，该号源自动作废，并且您的挂号费将不能退还。如果您预约的是专家号，应在就诊当天10：30以前凭预约号到医院1号楼2楼付费取号，否则该号源自动作废。若您累积违约3次，将被拉入黑名单，且三个月内不能在掌上预约挂号。</string>
    <string name="layout_temp430">9、如果挂的号过期了，且没有去医院就诊，挂号费用可以退吗？</string>
    <string name="layout_temp431">如果您预约的是普通号，若没有在预约时间就诊，该号源自动作废，并且您的挂号费将不能退还。</string>
    <string name="layout_temp432">如果您预约的是专家号，若没有在就诊当天10：30以前取号，该号源自动作废，且记一次违约。</string>
    <string name="layout_temp433">10、为什么软件中可预约的专家信息与医院窗口展示的不同？</string>
    <string name="layout_temp434">为了配合我院相关线上活动，我院将不定时增加一些专家号号源，与医院原来的专家排班并不冲突！</string>
    <string name="layout_temp435">11、如何区别生化检验单和影像检查单？</string>
    <string name="layout_temp436">目前本软件中的生化检验单指血液检验、体液与排泄物检验、生化检验、免疫检验、病原检验等实验诊断；影像检查单指CT检查单、MRI检查单、X线检查单、B超检查等影像诊断。以后还将陆续开通其他检查检验单查询。</string>
    <string name="layout_temp437">12、输入姓名和医嘱号后为什么仍然查不到报告单？</string>
    <string name="layout_temp438">首先，确认您做检查的时间，以及医院检查检验凭证下面的打印时间，若早于打印时间，则无法查询报告单结果。其次，确认您输入的医嘱号码和姓名是否与医院检查检验凭证单上一致，您的姓名错误、医嘱号码漏输或多输、扫描条形码时光线不足等原因均可导致查询失败。如果以上两点均无误，您还是查不到相关报告单信息，您可通过联系我们的客服，将您的姓名、手机号码和检查单的条形码反馈给我们，方便我们与医院信息中心核实。</string>
    <string name="layout_temp439">13、保存后的报告单要去哪里查看？</string>
    <string name="layout_temp440">您可以在本软件的个人中心界面，点击“我的化验记录”查看您保存的化验单结果，点击“我的检查记录”查看您保存的检查结果。</string>
    <string name="layout_temp441">14、专家在线中，如何知道某位医生是否在线？</string>
    <string name="layout_temp442">当您选择科室后，有“全科医生一览”和“咨询在线医生”两个模块，点击“咨询在线医生”展现的均为在线医生！</string>
    <string name="layout_temp443">15、向医生进行提问后，在哪里可以看到我的提问记录？</string>
    <string name="layout_temp444">提问成功后，您可以通过点击“专家在线——医生详情界面”右上角的“我的提问”，查看您的历史咨询记录；也可以通过“个人中心”里的“我的提问记录”，查看您的历史咨询记录。</string>
    <string name="layout_temp445">16、向医生进行提问后，医生要多久才可以回复我？</string>
    <string name="layout_temp446">当您提问成功后，我们会及时通知相关医生回答您的问题，一般情况下我们的医生会及时回答您的问题，但不排除回复延迟的情况。</string>
    <string name="layout_temp447">17、我的提问为什么会被关闭？</string>
    <string name="layout_temp448">当医生觉得您的问题已经回答完全，并不需要再进行回答，医生会关闭本次对话。若您还想咨询该医生，则您可与该医生重新建立提问。</string>
    <string name="layout_temp449">18、提问关闭后，我还能做什么？</string>
    <string name="layout_temp450">医生关闭您的问题后，您可以对本次对话进行评价，您的评价将帮助我们改善产品与服务，更好的监督医生服务于您。如果您还想咨询该医生，则您可与该医生重新建立提问。</string>
    <string name="layout_temp451">19、为什么在使用中会提示“您已在其他设备上登录”？</string>
    <string name="layout_temp452">本软件的账号只能登录一台手机，如果您的账号在其他设备登录时，您的本次登录将失效，您需要重新登录才能继续使用本软件，若出现以上情况，为确保您的账户安全，请及时修改您的登录密码，防止账号被盗。</string>
    <string name="layout_temp462">科室名字</string>
    <string name="layout_temp463">医生名字</string>
    <string name="layout_temp464">日期查询</string>
    <string name="layout_temp465">历史预约</string>
    <string name="layout_temp466">*当日号源预约截止时间：</string>
    <string name="layout_temp467">上午号：10:30;下午号：16:00</string>
    <string name="layout_temp468">*预约时请核对时间</string>
    <string name="layout_temp495">支付方式</string>
    <string name="layout_temp496">支付宝</string>
    <string name="layout_temp497">工商银行</string>
    <string name="layout_temp498">取消</string>
    <string name="layout_temp503">法律声明:本法律声明阐述的条款和条件适用于所有使用掌上手机客户端的用户。 掌上手机客户端(以下简称“本软件”)；浙大一院（以下简称“本院”）。</string>
    <string name="layout_temp504">版权声明</string>
    <string name="layout_temp505">本软件受《中华人民共和国著作权法》、《计算机软件保护条例》和相关的国际条约以及其他的法律法规保护，任何单位和个人未经本院授权不能拷贝、制作、修改、破解、出售、交易、转售、再发布本软件及其任何部分，或对本软件或本软件的任何部分创作衍生作品，进行反工程、反编辑或试图从本软件或本软件的任何部分提取源代码，但法律明确允许或要求的或本软件特别书面授权您的除外。否则将视为非法侵害，本院保留依法追究其责任的权利。</string>
    <string name="layout_temp506">隐私保护</string>
    <string name="layout_temp507">1、保护用户隐私是本软件的一项基本义务。“隐私”是指用户在注册账号时提供给本软件的个人身份信息，包括用户注册资料中的姓名、性别、个人有效身份证件号码、联系方式、家庭住址等。本软件保证不对外公开或向第三方提供用户注册资料及用户在使用网络服务时存储在本软件的非公开内容，但下列情况除外：</string>
    <string name="layout_temp508">（1）用户或用户监护人授权本软件披露的；</string>
    <string name="layout_temp509">（2）应用户监护人的合法要求而提供用户个人身份信息时；</string>
    <string name="layout_temp510">（3）有关法律要求本软件披露的；</string>
    <string name="layout_temp511">（4）司法机关或行政机关基于法定程序要求本软件提供的；</string>
    <string name="layout_temp512">（5）本软件为了维护自己合法权益而向用户提起诉讼或者仲裁时；</string>
    <string name="layout_temp513">（6）本软件出于软件正常应用、学术交流及讨论的目的时。</string>
    <string name="layout_temp514">2、本软件可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与本软件同等的保护用户隐私的责任，则本软件可将用户的注册资料（包括姓名、性别、个人有效身份证件号码、联系方式、家庭住址等）提供给该第三方。</string>
    <string name="layout_temp515">3、在不透露单个用户隐私资料的前提下，本软件有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。</string>
    <string name="layout_temp516">免责声明</string>
    <string name="layout_temp517">1、郑重提醒使用者：本软件所提供的所有信息仅供参考，不做个别诊断、用药和使用的根据，亦不能替代医生和其他医务人员的建议，一切因使用本软件信息而造成的任何意外、损失或损害，均由信息使用方自行负责，本软件概不负责，亦不承担任何直接的、间接的、特殊的、连带的法律责任。此外，本软件致力于提供正确、完整的健康及医疗信息，但不保证信息的正确性、准确性、可靠性、时效性和完整性，不对信息做出任何种类的保证，信息也许已经过期，本软件不承诺更新它们。</string>
    <string name="layout_temp518">2、本软件旨在为大众提供一个公共性医疗健康互动平台。提问者需认真浏览并同意遵守本软件相关协议或声明。本软件上所出现的问题回答及相关结果属建议性内容，不能作为诊断及医疗的依据。能否采用回答者建议，纯属提问者个人意愿，本软件不对此可能引起的任何损失及后果负责。</string>
    <string name="layout_temp519">3、本软件所有咨询、回答、相关评论仅代表作者本人的观点或基本判断，不代表本软件的观点和看法，与本软件立场无关。</string>
    <string name="layout_temp520">4、本软件所刊载的各类形式(包括但不仅限于文字、图片、图表)的作品（包括广告等）仅供参考使用，并不代表本软件同意其说法或描述，也不构成任何方面建议。对于用户根据本软件提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本软件不承担任何形式的责任。</string>
    <string name="layout_temp521">5、凡在本软件登记注册的用户，须自行负责对您的账户和密码保密，且须对您的账户和密码下发生的所有活动承担全部责任。</string>
    <string name="layout_temp522">6、权利人自愿同意不做任何妨碍或者破坏服务（或与服务连接的服务器及网络）的任何活动。若因散布谣言、造假、谩骂等原因而被禁止本软件对其服务的，本软件均免责。</string>
    <string name="layout_temp523">7、当政府部门、司法机关等依照法定程序要求本软件披露个人资料时，本软件将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，本软件均免责。</string>
    <string name="layout_temp524">8、由于与本软件链接的其他软件或网页所造成的个人资料泄露及由此而导致的任何法律争议和后果，本软件均免责。</string>
    <string name="layout_temp525">9、由于用户将个人密码告知他人或与他人共享注册帐户，由此导致的任何个人资料泄露，本软件均免责。</string>
    <string name="layout_temp526">10、任何由于黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常运营的不可抗力造成的个人资料泄露、丢失、被盗用或被窜改等，本软件均免责。</string>
    <string name="layout_temp527">11、除本软件注明的服务条款外，其他一切因使用本软件导致的任何意外、疏忽、诽谤、版权或知识产权侵犯及其所造成的损失(包括因下载而感染手机病毒)，本软件不承担任何法律责任。</string>
    <string name="layout_temp528">12、用户自行同意本软件可自行更新、升级或关闭，而无需经过您的同意。您可以在任何时候停止使用本软件，而无需特别通知本院。</string>
    <string name="layout_temp529">13、用户明确同意对本软件服务的使用承担全部风险，并对因其使用本软件服务而产生的一切后果承担全部风险，本软件明确表示对用户不作任何类型的担保，也不承担任何责任，但是对商业性的隐含担保，特定目的和不违反规定的适当担保除外。本软件不担保网络服务一定能满足用户的要求，也不担保网络服务不会中断，对服务的连续性、及时性、安全性、准确性都不作担保。对于因不可抗力或本软件不能避免或控制的原因及其他原因造成的网络服务中断或其它缺陷，本软件不承担任何责任。</string>
    <string name="layout_temp530">法律责任</string>
    <string name="layout_temp531">1、凡以任何方式登录本软件或直接、间接使用本软件者，均视为自愿同意掌上手机客户端声明的约束。</string>
    <string name="layout_temp532">2、本声明未涉及的问题参见中国有关法律法规，当本声明与中国法律法规冲突时，以中国法律法规为准。</string>
    <string name="layout_temp533">法律适用与司法管辖</string>
    <string name="layout_temp534">若因本软件产生任何诉诸于诉讼程序的法律争议，将以本院所在的法院为管辖法院，除非中国法律对此有强制性规定。</string>
    <string name="layout_temp535">本软件的声明以及其修改权、更新权及最终解释权均归本院所有。</string>
</resources>