<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/symptom_question_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_title" />
    <ScrollView android:id="@id/detail" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.1">
            <TextView android:textSize="24.0sp" android:textColor="#ffdc4d75" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp410" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp411" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp412" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title2" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp413" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp414" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title3" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp415" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp416" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title4" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp417" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp418" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title5" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp419" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp420" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp421" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp422" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title6" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp423" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp424" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title7" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp425" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp426" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp427" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title8" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp428" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp429" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title9" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp430" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp431" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp432" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title10" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp433" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp434" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title11" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp435" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp436" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title12" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp437" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp438" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title13" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp439" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp440" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title14" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp441" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp442" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title15" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp443" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp444" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title16" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp445" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp446" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title17" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp447" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp448" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title18" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp449" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp450" />
            <TextView android:textSize="18.0sp" android:textColor="#ff019aa7" android:id="@id/title19" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp451" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp452" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
