<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/symptom_question_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_title" />
    <ScrollView android:id="@id/detail" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.1">
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp503" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp504" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp505" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp506" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp507" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp508" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp509" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp510" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp511" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp512" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp513" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp514" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp515" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp516" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp517" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp518" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp519" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp520" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp521" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp522" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp523" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp524" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp525" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp526" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp527" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp528" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp529" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp530" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp531" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp532" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp533" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp534" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp535" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
