<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_common" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_title" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="30.0dip">
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/depart_name" android:background="@drawable/btn_expert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp462" />
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/doctor_name" android:background="@drawable/btn_expert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/layout_temp463" />
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/date_time" android:background="@drawable/btn_expert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/layout_temp464" />
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/my_his_regist" android:background="@drawable/btn_expert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/layout_temp465" />
        <TextView android:textSize="18.0sp" android:textColor="@color/red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="13.0dip" android:text="@string/layout_temp466" />
        <TextView android:textSize="18.0sp" android:textColor="@color/red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="5.0dip" android:text="@string/layout_temp467" />
        <TextView android:textSize="18.0sp" android:textColor="@color/red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="5.0dip" android:text="@string/layout_temp468" />
    </LinearLayout>
</LinearLayout>
